[project]
name = "yaml2helm"
version = "0.1.0"
description = "Convert Kubernetes YAML manifests into Helm charts"
authors = [{name = "Your Name"}]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "ruamel.yaml>=0.18.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
yaml2helm = "yaml2helm.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
