[project]
name = "yaml2helm"
version = "0.1.0"
description = "Convert Kubernetes YAML manifests into Helm charts automatically"
readme = "README.md"
authors = [{name = "C Turner", email = "chris@example.com"}]
license = "MIT"
requires-python = ">=3.11"
keywords = ["kubernetes", "helm", "yaml", "k8s", "converter", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.9.0",
    "ruamel.yaml>=0.18.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/thecturner/yaml2helm"
Repository = "https://github.com/thecturner/yaml2helm"
Issues = "https://github.com/thecturner/yaml2helm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
yaml2helm = "yaml2helm.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
